testing/tests/ui/match_with_extra.stderr
error: failed to parse template source
 --> <source attribute>:3:5
  |
       3 |     // Help, I forgot how to write comments!
         |     ^ close to this token
         |
 --> tests/ui/match_with_extra.rs:4:3
  |
4 | #[template(
  |   ^^^^^^^^
